; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_env.c_grub_env_unset.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_env.c_grub_env_unset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_env_var = type { %struct.grub_env_var*, %struct.grub_env_var*, i64, i64 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grub_env_unset(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.grub_env_var*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.grub_env_var* @grub_env_find(i8* %4)
  store %struct.grub_env_var* %5, %struct.grub_env_var** %3, align 8
  %6 = load %struct.grub_env_var*, %struct.grub_env_var** %3, align 8
  %7 = icmp ne %struct.grub_env_var* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %35

9:                                                ; preds = %1
  %10 = load %struct.grub_env_var*, %struct.grub_env_var** %3, align 8
  %11 = getelementptr inbounds %struct.grub_env_var, %struct.grub_env_var* %10, i32 0, i32 3
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %9
  %15 = load %struct.grub_env_var*, %struct.grub_env_var** %3, align 8
  %16 = getelementptr inbounds %struct.grub_env_var, %struct.grub_env_var* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %14, %9
  %20 = load i8*, i8** %2, align 8
  %21 = call i32 @grub_env_set(i8* %20, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  br label %35

22:                                               ; preds = %14
  %23 = load %struct.grub_env_var*, %struct.grub_env_var** %3, align 8
  %24 = call i32 @grub_env_remove(%struct.grub_env_var* %23)
  %25 = load %struct.grub_env_var*, %struct.grub_env_var** %3, align 8
  %26 = getelementptr inbounds %struct.grub_env_var, %struct.grub_env_var* %25, i32 0, i32 1
  %27 = load %struct.grub_env_var*, %struct.grub_env_var** %26, align 8
  %28 = call i32 @grub_free(%struct.grub_env_var* %27)
  %29 = load %struct.grub_env_var*, %struct.grub_env_var** %3, align 8
  %30 = getelementptr inbounds %struct.grub_env_var, %struct.grub_env_var* %29, i32 0, i32 0
  %31 = load %struct.grub_env_var*, %struct.grub_env_var** %30, align 8
  %32 = call i32 @grub_free(%struct.grub_env_var* %31)
  %33 = load %struct.grub_env_var*, %struct.grub_env_var** %3, align 8
  %34 = call i32 @grub_free(%struct.grub_env_var* %33)
  br label %35

35:                                               ; preds = %22, %19, %8
  ret void
}

declare dso_local %struct.grub_env_var* @grub_env_find(i8*) #1

declare dso_local i32 @grub_env_set(i8*, i8*) #1

declare dso_local i32 @grub_env_remove(%struct.grub_env_var*) #1

declare dso_local i32 @grub_free(%struct.grub_env_var*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
